parsing and importing to database works now (w/ categories only for now)